welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: value += is not a member of Int
      die1+=1
          ^withoutDoubles:8: error: reassignment to val
      if(die1==7)die1=1
                     ^